correctly align footer text

--- a/public_html/layout/professional/style.css
+++ b/public_html/layout/professional/style.css
@@ -393,7 +393,6 @@ select {
   padding-left:4px;
   padding-right:4px;
   vertical-align:middle;
-  text-align:left;
 }
 .footerblock a:link {
   background:transparent;
